<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightestBlack">

            <ImageView
                android:id="@+id/searchcoverImage"
                android:contentDescription="@string/desc_game_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen185"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/asset_search_placeholder" />

            <TextView
                android:id="@+id/searchTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen6"
                app:layout_constraintTop_toBottomOf="@id/searchcoverImage"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/quarkbold"
                android:textStyle="bold"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font18"
                android:text="@string/game_title"
                />

            <TextView
                android:id="@+id/searchRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchTitle"
                android:fontFamily="@font/quarklight"
                android:textColor="@color/colorMainWhite"
                android:textSize="@dimen/font14"
                android:text="@string/game_rating"/>

            <TextView
                android:id="@+id/searchnormalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen6"
                app:layout_constraintTop_toBottomOf="@id/searchRating"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/quarklight"
                android:textColor="#ff9a00"
                android:textSize="@dimen/font12"
                android:text="@string/game_normal_price"
                />

            <TextView
                android:id="@+id/searchdealPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen6"
                android:fontFamily="@font/quarklight"
                android:textColor="#9bd00f"
                android:text="@string/game_deal_price"
                android:textSize="@dimen/font12"
                android:layout_marginEnd="@dimen/dimen6"
                app:layout_constraintStart_toEndOf="@id/searchnormalPrice"
                app:layout_constraintTop_toBottomOf="@+id/searchRating" />

            <View
                android:id="@+id/dicount_viewholder"
                android:layout_width="@dimen/dimen50"
                android:layout_height="@dimen/dimen25"
                app:layout_constraintEnd_toEndOf="@id/searchcoverImage"
                app:layout_constraintTop_toTopOf="@id/searchcoverImage"
                android:background="#4c6b22"/>

            <TextView
                android:id="@+id/searchDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/dicount_viewholder"
                app:layout_constraintStart_toStartOf="@id/dicount_viewholder"
                app:layout_constraintTop_toTopOf="@id/dicount_viewholder"
                app:layout_constraintBottom_toBottomOf="@id/dicount_viewholder"
                android:textSize="@dimen/font14"
                android:textColor="#eeeeee"
                android:text="@string/game_discount"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>