<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightestBlack">

            <ImageView
                android:id="@+id/hotcoverImage"
                android:contentDescription="@string/desc_game_image"
                android:layout_width="@dimen/dimen192"
                android:layout_height="@dimen/dimen100"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/hotdealNormalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen6"
                app:layout_constraintTop_toBottomOf="@id/hotcoverImage"
                app:layout_constraintEnd_toStartOf="@id/hotdealPrice"
                android:fontFamily="@font/quarklight"
                android:textColor="#e12f2f"
                android:textSize="@dimen/font11"
                android:text="@string/game_normal_price"
                />

            <TextView
                android:id="@+id/hotdealPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quarklight"
                android:textColor="#9bd00f"
                android:text="@string/game_deal_price"
                android:textSize="@dimen/font11"
                android:layout_marginEnd="@dimen/dimen6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotcoverImage" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorMainWhite"
                app:layout_constraintStart_toStartOf="@id/hotdealNormalPrice"
                app:layout_constraintEnd_toEndOf="@id/hotdealNormalPrice"
                app:layout_constraintTop_toTopOf="@id/hotdealNormalPrice"
                app:layout_constraintBottom_toBottomOf="@id/hotdealNormalPrice"/>

            <View
                android:id="@+id/dicount_viewholder"
                android:layout_width="30dp"
                android:layout_height="15dp"
                app:layout_constraintEnd_toEndOf="@id/hotcoverImage"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#4c6b22"/>

            <TextView
                android:id="@+id/hotdealDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/dicount_viewholder"
                app:layout_constraintStart_toStartOf="@id/dicount_viewholder"
                app:layout_constraintTop_toTopOf="@id/dicount_viewholder"
                app:layout_constraintBottom_toBottomOf="@id/dicount_viewholder"
                android:textSize="@dimen/font11"
                android:textColor="#eeeeee"
                android:text="@string/game_discount"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>